# catkin-813-test

./: CMakeLists.txt
cmake/: foo-config.cmake
